--- a/index.html
+++ b/index.html
@@ -74,7 +74,24 @@
           <span class="content__accent">По-</span><br />смотри<br />в окно
         </h1>
         <ul class="content__list">
-          <!-- ЗДЕСЬ ОКАЖУТСЯ ТЕМПЛЕЙТЫ КАРТОЧЕК -->
+          <template class="cards-list-item-template">
+            <li class="content__list-item">
+              <a href="#0" class="content__card-link">
+                <article class="content__video-card">
+                  <div class="content__video-card-description-container">
+                    <h2 class="content__video-card-title"></h2>
+                    <p class="content__video-card-description"></p>
+                  </div>
+                  <img src="" alt="" class="content__video-card-thumbnail" />
+                </article>
+              </a>
+            </li>
+          </template>
+          <li>
+          <template class="more-button-template">
+            <button class="button more-button">Показать еще</button>
+          </li>
+          </template>
         </ul>
       </section>
     </main>
@@ -91,24 +108,6 @@
         </div>
       </div>
     </template>
-
-    <template class="cards-list-item-template">
-      <li class="content__list-item">
-        <a href="#0" class="content__card-link">
-          <article class="content__video-card">
-            <div class="content__video-card-description-container">
-              <h2 class="content__video-card-title"></h2>
-              <p class="content__video-card-description"></p>
-            </div>
-            <img src="" alt="" class="content__video-card-thumbnail" />
-          </article>
-        </a>
-      </li>
-    </template>
-    <template class="more-button-template">
-      <li><button class="button more-button">Показать еще</button></li>
-    </template>
-
     <template class="error-template">
       <div class="error">
         <h2 class="error__title"></h2>
